@@ -2,6 +2,13 @@ LIBTOOL=../../../libtool
 
 CPPFLAGS+=-I../../../include -I../../../servers/slapd
 
+ldap_subdir = openldap
+prefix=/usr/local
+exec_prefix = $(prefix)
+libdir = $(exec_prefix)/lib
+libexecdir = $(exec_prefix)/libexec
+moduledir = $(exec_prefix)/libexec/$(ldap_subdir)
+
 all: autogroup.la
 
 autogroup.lo:	autogroup.c
@@ -9,12 +16,12 @@ autogroup.lo:	autogroup.c
 
 autogroup.la:	autogroup.lo
 	$(LIBTOOL) --mode=link $(CC) -version-info 0:0:0 \
-	-rpath $(PREFIX)/lib -module -o $@ $? 
+	-rpath $(libdir) -module -o $@ $? 
 
 clean:
 	rm -f autogroup.lo autogroup.la
 
 install: autogroup.la
-	mkdir -p $(PREFIX)/lib/openldap
-	$(LIBTOOL) --mode=install cp autogroup.la $(PREFIX)/lib/openldap
-	$(LIBTOOL) --finish $(PREFIX)/lib
+	mkdir -p $(DESTDIR)$(moduledir)
+	$(LIBTOOL) --mode=install cp autogroup.la $(DESTDIR)$(moduledir)
+	$(LIBTOOL) --finish $(DESTDIR)$(moduledir)
